# EPO

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Benchmark.py  FREEZE_UNFREEZE_EXPLANATION.md  LICENSE  README.md  adjuster.py  adjuster_lm.py  benchmark.ipynb  benchmark_results.json  demo.ipynb  demo_LM.ipynb  demo_epo.py  early_stop_params.ipynb  environment.yml  epo.py  fram_optimizer.py  frustums.ipynb  further_ba.py  paths.txt  pyproject.toml  rerun_viz.py  test.ipynb  test.py  trajectory_comparison.ply  visaulize_cam.ipynb  visual_dt.ipynb  visual_edges.ipynb
.github/workflows/: lint.yml
adjuster/: adjuster.py  helpers.py  loss.py
adjuster_modules/: __init__.py  misc.py  reconstruct_and_viz.py
benchmarks/: paths.json
camera_ply_output/: camera_points_combined.ply
epo_modules/: __init__.py  misc.py  reconstruct_and_viz.py
extractors/: canny.py
helpers/: benchmark_plotting.py  benchmark_pose.py  demo_plotting.py  frustum.py  load.py  reconstruction.py  reprojection.py  reprojection_compiled.py  triton_ops.py  utils_benchmark_pose.py
losses/: dt_loss.py  loss.py
modules/: __init__.py  base_module.py  camera.py  depth.py  edges3d.py  misc.py  mlp.py  parameters_module.py  pose.py  reconstruct_and_viz.py  stopping_criterion.py
optimized_reconstruction_GD/_current_test/: timings.txt  training_logs.json
optimized_reconstruction_GD/allignment_test/: timings.txt  training_logs.json
optimized_reconstruction_GD/allignment_test_1/: timings.txt  training_logs.json
optimized_reconstruction_GD/fr_desk/: cameras.txt  images.txt  timings.txt  training_logs.json
optimized_reconstruction_GD/fr_desk_K/: images.txt  timings.txt  training_logs.json
optimized_reconstruction_GD/fr_desk_Rq/: images.txt  timings.txt  training_logs.json
optimized_reconstruction_GD/fr_desk_TOF/: cameras.txt  images.txt  timings.txt  training_logs.json
optimized_reconstruction_GD/fr_desk_TOF_all/: images.txt  timings.txt  training_logs.json
optimized_reconstruction_GD/fr_desk_TOF_map/: images.txt  timings.txt  training_logs.json
optimized_reconstruction_GD/fr_desk_TOF_ref_all/: cameras.txt  images.txt  timings.txt  training_logs.json
optimized_reconstruction_GD/fr_desk_TOF_test/: timings.txt  training_logs.json
optimized_reconstruction_GD/fr_desk_TOF_test_frame/: timings.txt  training_logs.json
optimized_reconstruction_GD/fr_desk_VGGT_K/: images.txt  timings.txt  training_logs.json
tests/: test_benchmark_pose_equivalence.py  test_triton_distance_transform.py  test_triton_project_sample.py  test_triton_unproject.py
wrapper/: __init__.py  any2full_wrapper.py  base_wrapper.py  da3_wrapper.py  dvlt_wrapper.py  mapanything_wrapper.py  np_to_colmap.py  paths_example.json  pi3x_wrapper.py  run_for_dataset.py  vggt_omega_wrapper.py  vggt_wrapper.py
(+22 files in other folders)
