[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epo"
version = "0.1.0"
description = "Edge-based Pose Optimization for 3D foundation model reconstructions"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Mattia D'Urso", email = "mattiadurso98@gmail.com" }]
dependencies = [
    "torch>=2.4",
    "torchvision>=0.19",
    "triton>=3.0",
    "kornia>=0.7",
    "pycolmap>=4.0",
    "numpy>=1.26",
    "tqdm>=4.66",
    "matplotlib>=3.8",
    "pandas>=2.0",
]

[tool.setuptools]
py-modules = ["epo"]
packages = ["epo_modules", "modules", "helpers", "losses", "extractors"]

[tool.black]
line-length = 88
target-version = ["py310"]
extend-exclude = '''
/(
    extractors/BDCN
  | extractors/TEED
  | extractors/hed
  | extractors/hed_
  | extractors/DiffusionEdge
  | extractors/SAM2
  | extractors/rcf_torch
  | optimized_reconstruction.*
  | benchmarks
  | benchmarks_full
  | rerun_video
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = [
    "extractors/BDCN",
    "extractors/TEED",
    "extractors/hed",
    "extractors/hed_",
    "extractors/DiffusionEdge",
    "extractors/SAM2",
    "extractors/rcf_torch",
    "optimized_reconstruction",
    "benchmarks",
    "benchmarks_full",
    "rerun_video",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "B",      # flake8-bugbear (catches mutable defaults via B006)
    "UP",     # pyupgrade
    "D",      # pydocstyle
    "PLR0915", # too-many-statements (mirrors CLAUDE.md 40-line rule)
]
ignore = [
    "E501",   # line length — Black owns this
    "D100",   # missing module docstring (we have them; pydocstyle is noisy on tests)
    "D104",   # missing __init__ docstring
    "D107",   # missing docstring in __init__ — class docstring documents args here
    "D203",   # incompatible with D211 (no blank line before class docstring)
    "D213",   # incompatible with D212 (multi-line summary on first line)
    "D205",   # blank line between summary and description — pedantic formatting
    "D415",   # first line ending punctuation — pedantic formatting
    "B028",   # warnings.warn missing stacklevel — mechanical, not a real bug
    "PLR0915", # too-many-statements — refactor signal, not a gate; tracked separately
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]                          # tests don't need full pydocstyle
"modules/__init__.py" = ["F401"]           # re-exports
"epo_modules/__init__.py" = ["F401"]       # re-exports

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-statements = 40
